tests/cases/fail/list_unknown_method.p4
def main() -> None:
    xs: list[int] = []
    xs.push(1)
